[BUG #8302] List renderer icon is shrinking when renderer is truncated * Preventing img from shrinking in flex layout context.

--- a/framework/source/resource/qx/mobile/scss/common/_main.scss
+++ b/framework/source/resource/qx/mobile/scss/common/_main.scss
@@ -56,6 +56,10 @@ a:hover, a:active {
   width:100%;
 }
 
+img {
+  @include flex-shrink(0);
+}
+
 img:not([src]) {
   display:none;
 }
